--- a/results/report.html
+++ b/results/report.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Lucas Childs, Bahaar Ahuja, …">
+<meta name="author" content="Lucas Childs, Minu Pabbathi, Nathan Kim, Bahaar Ahuja, Anna Liang">
 <meta name="dcterms.date" content="2025-11-05">
 
 <title>Biomarkers of ASD</title>
@@ -87,7 +87,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Lucas Childs, Bahaar Ahuja, … </p>
+             <p>Lucas Childs, Minu Pabbathi, Nathan Kim, Bahaar Ahuja, Anna Liang </p>
           </div>
   </div>
     
@@ -106,7 +106,6 @@ window.Quarto = {
 </header>
 
 
-<p>Use this as a template. Keep the headers and remove all other text. In all, your report can be quite short. When it is complete, render and then push changes to your team repository.</p>
 <section id="abstract" class="level2">
 <h2 class="anchored" data-anchor-id="abstract">Abstract</h2>
 <p>This report investigates blood biomarkers for autism spectrum disorder (ASD) with a focus on evaluating how methodological choices influence results. Using the dataset from Hewitson et al.&nbsp;(2021), we examine protein distributions and justify the use of log-transformations to stabilize variance and reduce skewness. We explore subject-level outliers and assess whether their frequency differs between ASD and typically developing (TD) groups. We then evaluate how modifications to protein selection procedures, such as varying the number of top predictive proteins, using training/test partitions, and applying fuzzy intersections, affect classification performance. Finally, we identify alternative protein panels that achieve comparable or improved classification accuracy and benchmark these results against the original in-class analysis. This work highlights the sensitivity of biomarker analyses to preprocessing and methodological decisions and provides guidance for more robust ASD protein panel selection.</p>
@@ -123,17 +122,18 @@ window.Quarto = {
 <section id="summary-of-published-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="summary-of-published-analysis">Summary of published analysis</h2>
 <p>Summarize the methodology of the paper in 1-3 paragraphs. You need not explain the methods in depth as we did in class; just indicate what methods were used and how they were combined. If possible, include a diagram that depicts the methodological design. (Quarto has support for <a href="https://quarto.org/docs/authoring/diagrams.html">GraphViz and Mermaid flowcharts</a>.) Provide key results: the proteins selected for the classifier and the estimated accuracy.</p>
+<p>The original researchers used multiple <em>t</em>-tests to see whether there were significant differences in protein levels between the ASD group and the neurotypical group. Based on those <em>t</em> values, the top 10 proteins were selected for the prediction model. Each protein was also correlated with ADOS scores and the top 10 highly correlated proteins were selected. The third approach was random forest, which involves using a random forest to predict whether a participant has ASD or is typically developing. By keeping track of which variables were used most to define splits, a variable importance score can be used to determine which predictors were most influential in prediction. Using this method, the top proteins were selected.</p>
+<p>After running all three methods and determining the top 10 proteins for each method, 5 proteins that were common to all three methods were selected as the core proteins. Each of the other proteins were added one at a time to see their impact on the AUC, leading to about four additional proteins being classified as optimal proteins. The final 9 proteins were IgD, suPAR, MAPK14, EPHB2, DERM, ROR1, GI24, elF-4H, and ARSB. After all nine were combined, the AUC of the classifier was approximately 0.860.</p>
 <p><strong>Q1:</strong> A logarithmic transformation was done to the biomarker levels in order to reduce scale, variance, and skewedness of the data. Furthermore, the data was centered and scaled to standardize the distribution of each biomarker.</p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
+<div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="../images/Q1Comparison.png" class="img-fluid figure-img"></p>
+<p><img src="../images/Q1Comparison.png" class="img-fluid figure-img" style="width:50.0%"></p>
+<figcaption>Question 1 comparison</figcaption>
 </figure>
 </div>
-</div>
-</div>
 <p>From the density plot, <code>prot2</code> looks skewed (strongly right-skewed). It contain large outliers, and the scale of <code>prot2</code>’s protein level is very high. But, after log transforming, the right-skewed <code>prot2</code> now appears more symmetric and of a much smaller and more readable scale.</p>
+<p><strong>Q2:</strong> We temporarily removed trimming and flagged protein-level outliers at <span class="math inline">\(|z|&gt;3\)</span>, then aggregated outliers by subject to identify subject-level outliers. Applying the Tukey boxplot rule to these counts revealed a small set of clear outlier subjects. Descriptively, outlier subjects were more common in TD than ASD, but a two-proportion test indicated the difference was not statistically significant. Overall, extreme values are concentrated in a few participants, so the trimming at <span class="math inline">\(\pm3\)</span> standard deviations mainly reduces their influence rather than indicating a group effect. This validates the preprocessing approach and allows us to proceed with the trimmed data</p>
+<p><strong>Q3:</strong> To evaluate the sensitivity of the analysis to different methodological choices, we first modified the workflow so that all feature selection was carried out exclusively on a training partition, while a separate test set was held out and used only once at the very end for evaluation. This change avoids data leakage and gives a more realistic estimate of model performance. Next, instead of selecting only the top 10 proteins per method as was done in class, we increased this number to 20, which improved the model’s sensitivity, specificity, and AUC. For example, using 20 proteins, the logistic regression model achieved sensitivity of 0.75, specificity of 0.867, accuracy of 0.806, and ROC AUC of 0.892 on the test set. Finally, we compared a hard intersection of selected proteins to a fuzzy intersection approach. Under the fuzzy intersection, proteins were combined if they appeared in either method, rather than requiring overlap across all methods. This more flexible approach resulted in lower performance (sensitivity = 0.5625, specificity = 0.8000, accuracy = 0.6774, AUC = 0.7833) compared to the hard intersection and full panel, suggesting that although fuzzy selection increases feature stability, it may include weaker predictors and reduce classification accuracy.</p>
 <p><strong>Q4:</strong> We chose to find an alternate protein panel that achieves improved classification accuracy using a guided LASSO approach with differential penalties. Proteins identified through both multiple testing with t-tests and Random Forest importance (<code>proteins_sstar</code>) were assigned zero penalty to ensure these were included in the panel without significant shrinkage due to regularization. So, this prior validation was used since there was strong prior evidence that these proteins were relevant. The remaining proteins not selected by the two aforementioned methods received L1 regularization (LASSO regularization), allowing us to discover additional predictive biomarkers while controlling overfitting. We can think of this method from a Bayesian standpoint where the prior data (pre-selected panel of 5 proteins, <code>proteins_sstar</code>) informed our belief about protein importance. Overall, our method displayed increased classification accuracy, specifically highlighted by the metric: ‘accuracy’. The metrics are depicted below:</p>
 <p><span class="math display">\[
 \begin{array}{llr}
@@ -196,6 +196,7 @@ window.Quarto = {
 <li>CSRP3</li>
 <li>MIG</li>
 </ul>
+<p>$$</p>
 </section>
 <section id="findings" class="level2">
 <h2 class="anchored" data-anchor-id="findings">Findings</h2>
@@ -204,16 +205,72 @@ window.Quarto = {
 <h3 class="anchored" data-anchor-id="impact-of-preprocessing-and-outliers">Impact of preprocessing and outliers</h3>
 <p><strong>Task 1:</strong> After looking at the raw protein level distributions for a sample of 4 proteins in the dataset, it became clear that the scale of each protein level was very different across proteins. For example, one protein’s mean was 17,164 while another’s was 458. Furthermore, we found certain proteins had skewed distributions where one protein had a mean roughly 5,000 units larger than its median, indicating a right skew. Looking at each protein’s density further revealed the differing scales of each protein level, large outliers, and skewed distributions apparent in 2 out of the 4 randomly selected proteins.</p>
 <p>The log transformation of the protein levels helps to compress the scale of protein levels across the wide range of positive values that were encountered. Additionally, the logarithm helps with skewed data, helping to make data more symmetric and closer to a normal distribution (as confirmed with histograms and a QQ Plot).</p>
-<p><strong>Task 2:</strong></p>
+<p><strong>Task 2:</strong> After removing the original trimming, we flagged protein-level outliers at <span class="math inline">\(|z|&gt;3\)</span>, where 99.7% of data is captured under a normal curve. Using the Tukey cutoff <span class="math inline">\((Q3 + 1.5\cdot IQR \approx 29.4)\)</span>, the 154 test subjects were considered outliers if they had <span class="math inline">\(\geq 30\)</span> outlier proteins. This flagged 13 outlier subjects, distributed as <span class="math inline">\(\frac{4}{76} \approx 5.3\%\)</span> in the ASD group and <span class="math inline">\(\frac{9}{78} \approx 11.5\%\)</span> in the TD group. However, a two-proportion test found no statistically significant difference in this frequency of outlier subjects between ASD and TD (p = 0.2668), suggesting that extreme values are concentrated in a small number of individuals rather than representing a systematic group difference. These findings support the validity of the original trimming approach. The extreme values appear to be leverage points or noise rather than having significant impact, and the <span class="math inline">\(\pm 3\)</span> SD trimming in the initial dataset is appropriate. Thus, we can proceed with the original trimmed dataset for our analysis.</p>
 </section>
 <section id="methodological-variations" class="level3">
 <h3 class="anchored" data-anchor-id="methodological-variations">Methodological variations</h3>
-<p>Task 3</p>
+<p><strong>Task 3:</strong></p>
+<p>The original analysis selected 10 proteins. To improve the predictive ability, we extended this to 20 proteins. The top 20 proteins from the <em>t</em>-tests and random forest were used to fit a logistic regression model. This improved the sensitivity by 6%, specificity by 13%, accuracy by 9%, and AUC by 4%, likely because adding more predictors will explain more of the variability.</p>
+<p>Additionally, instead of using a hard intersection between the top 10 proteins, we tested using a fuzzy intersection, meaning we allowed some overlap between proteins from both analyses. The new analysis decreased the sensitivity by 20%, specificity by 7%, accuracy by 10%, and AUC by 12%. This could be because proteins that were found to be important in both analysis likely had the highest predictive power. When using other proteins that are less explanative, the accuracy decreases significantly.</p>
 </section>
 <section id="improved-classifier" class="level3">
 <h3 class="anchored" data-anchor-id="improved-classifier">Improved classifier</h3>
-<p><strong>Task 4:</strong> Our alternate protein panel consisted of 35 proteins versus the 5 used in the <code>inclass-analysis</code>. We found that combining prior knowledge of protein importance with regularized classification lead to the best model accuracy. Overall our method of combining multiple t-tests, Random Forest importance, and the guided LASSO approach led to improved results compared to the baseline displaying <span class="math inline">\(8\%\)</span> increase in accuracy, <span class="math inline">\(27\%\)</span> increase in specificity, <span class="math inline">\(\approx 3\%\)</span> decrease in AUC, and an <span class="math inline">\(8\%\)</span> decrease in sensitivity. Even though AUC and sensitivity decreased slightly, the other metrics show an overall improvement in classification accuracy.</p>
-<p>We also found that just running LASSO regularization on the whole set of proteins led to similar but slightly decreased classification accuracy compared to the baseline approach. In order to navigate around this, the incorporated prior knowledge of the 2-method statistically validated panel of proteins proved useful.</p>
+<p><strong>Task 4:</strong> We explored two distinct alternative panel approaches for Task 4: a Pure LASSO approach and a Guided LASSO approach, benchmarking both against the original In-class Intersection model (a 5-protein panel). Our methods sought either a comparable simpler panel or an alternative panel with improved classification performance.The Pure LASSO approach used LASSO penalized regression for both feature selection and final classification, resulting in a 43-protein panel. This panel prioritized reducing false positives and resulted in a notable performance trade-off:</p>
+<div class="cell">
+<div class="cell-output-display">
+<table class="caption-top table table-sm table-striped small">
+<caption>Comparative Performance and Insights: Pure LASSO vs.&nbsp;In-class Baseline</caption>
+<colgroup>
+<col style="width: 9%">
+<col style="width: 18%">
+<col style="width: 9%">
+<col style="width: 20%">
+<col style="width: 42%">
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Metric</th>
+<th style="text-align: center;">In-class Intersection</th>
+<th style="text-align: center;">Pure LASSO</th>
+<th style="text-align: center;">Change vs.&nbsp;Baseline</th>
+<th style="text-align: center;">Key Insight</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Accuracy</td>
+<td style="text-align: center;">0.774</td>
+<td style="text-align: center;">0.767</td>
+<td style="text-align: center;"><span class="math inline">\(\approx 1\%\)</span> decrease</td>
+<td style="text-align: center;">Comparable overall accuracy.</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Sensitivity</td>
+<td style="text-align: center;">0.812</td>
+<td style="text-align: center;">0.750</td>
+<td style="text-align: center;"><span class="math inline">\(7.6\%\)</span> decrease</td>
+<td style="text-align: center;">Reduced ability to correctly identify ASD cases.</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Specificity</td>
+<td style="text-align: center;">0.733</td>
+<td style="text-align: center;">0.933</td>
+<td style="text-align: center;"><span class="math inline">\(27.3\%\)</span> increase</td>
+<td style="text-align: center;">Vastly improved performance in ruling out controls.</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">AUROC</td>
+<td style="text-align: center;">0.883</td>
+<td style="text-align: center;">0.858</td>
+<td style="text-align: center;"><span class="math inline">\(\approx 2.8\%\)</span> decrease</td>
+<td style="text-align: center;">Lower overall discrimination ability.</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<p>The most significant finding from the Pure LASSO model is the dramatic increase in Specificity (from <span class="math inline">\(0.733\)</span> to <span class="math inline">\(0.933\)</span>). This trade-off is valuable, as it greatly reduces the rate of false positives, making the panel highly reliable for control classification, a desirable characteristic for preliminary diagnostic screening.</p>
+<p>In addition to the Pure LASSO model, the Guided LASSO approach (using prior knowledge combined with LASSO, as detailed in the project narrative) resulted in a 35-protein panel. While the performance metrics for this model were similar to the baseline across all metrics except Specificity (Accuracy <span class="math inline">\(0.770\)</span>, Sensitivity <span class="math inline">\(0.745\)</span>, Specificity <span class="math inline">\(0.733\)</span>, AUROC <span class="math inline">\(0.857\)</span>), the overall strategy of combining multiple feature selection methods (t-tests, Random Forest, and Guided LASSO) provided a robust and statistically validated pathway to stable panel selection.</p>
 </section>
 </section>
 
